--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
 	        <artifactId>jjwt</artifactId>
 	        <version>0.9.1</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.17.2</version>
+		 </dependency>
+		 <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.17.2</version>
+		 </dependency>
 	</dependencies>
 
 	<build>
