--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://localhost:5432/role_based
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+server.error.whitelabel.enabled=false
+
+#server.port=8081
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
