--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,32 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/role_based
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/role_based
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#
+#server.error.whitelabel.enabled=false
+#
+##server.port=8081
+#spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
+spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.port=8080
 
-server.error.whitelabel.enabled=false
-
-#server.port=8081
-spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+jwt.token.validity=18000
+jwt.signing.key=signingkey
+jwt.authorities.key=roles
+jwt.token.prefix=Bearer
+jwt.header.string=Authorization
